@@ -1,3 +1,11 @@
+2009-04-20  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/controller.c
+	* src/metadata.[ch]
+	* src/util.[ch]
+	* src/vgl-tray-icon.c:
+	Move lastfm_get_track_cover_image() from metadata.c to util.c
+
 2009-04-05  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/Makefile.am
